changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

plugins/cfpython/include/cfpython_proto.h, plugins/cfpython/cfpython.c: Fix
  broken give command. Was broken due to MSW removing -Bsymbolic when building
  plugins about half a year ago. Also change some other symbols to static in the
  plugins to avoid more issues like this.
plugins/cflogger/include/cflogger_proto.h, plugins/cflogger/cflogger.c,
  plugins/citylife/include/citylife_proto.h, plugins/citylife/citylife.c,
  plugins/cfrhg/include/cfrhg_proto.h, plugins/cfrhg/cfrhg.c,
  plugins/cfanim/include/cfanim.h, plugins/cfanim/include/cfanim_proto.h,
  plugins/cfanim/cfanim.c, plugins/cfnewspaper/include/cfnewspaper_proto.h,
  plugins/cfnewspaper/cfnewspaper.c: More changes in the same style as the above
  python changes to reduce possible symbol lookup conflicts. Also make some
  functions static.
plugins/cfrhg/include/cfrhg_proto.h, plugins/cfrhg/cfrhg.c: Fix a typo in cfrhg
  (was "cfrgh" in one place).
Arvid Norlander 2009-02-12

common/treasure.c: Restore item_power if GT_MINIMAL is passed into
    fix_generated_item().  Fixes bug 2590465: Anvils making items without
    item power
MSW 2009-02-11

lib/Makefile.am: replace make with $(MAKE) - needed if using non default
    make, or otherwise have special set up.
MSW 2009-02-11

lib/attackmess: Fix for bug# [ 2565212 ] Output quirk with wraith feed ability
(You You).  Removed 'You' text from the attack messages file.
Rick Tanner 2009-02-11

lib/.collect-stamp, lib/smooth: Both of these are generated by make collect,
  remove them from SVN. The latter file also showed up a lot in svn diff because