@@ -14,6 +14,15 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/apply.c, server/skills.c, server/player.c, server/spell_attack.c: Add a
+  comment marking some variables set but then never used (found with compiler
+  warnings). Unsure about what the correct way to solve them are (that is:
+  should the variable assignment be removed, or should the variable be used
+  somewhere).
+server/c_misc.c, common/map.c, common/object.c: Fix some format strings using %d
+  when %u should have been used.
+Arvid Norlander 2009-02-13
+
 plugins/cfpython/include/cfpython_proto.h, plugins/cfpython/cfpython.c: Fix
   broken give command. Was broken due to MSW removing -Bsymbolic when building
   plugins about half a year ago. Also change some other symbols to static in the
